projects/qbsf/deployment/sf-qb-integration-final/Salesforce/objects/QB_Integration_Log.object
<CustomObject>
    <description>Log of QuickBooks integration activities</description>
    <label>QB Integration Log</label>
    <nameField>
        <displayFormat>QBL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Name of the integration process</description>
        <inlineHelpText>Name of the integration process that generated this log</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the integration process</description>
        <inlineHelpText>Status of the integration process</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>Message__c</fullName>
        <description>Log message</description>
        <inlineHelpText>Details about the integration process result</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Time when the log was created</description>
        <inlineHelpText>Time when the log was created</inlineHelpText>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>